Modification about file

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h2>About</h2>
-    <p> worash section, this is worash abocherugn</p>
+    <p>worash section, this is worash abocherugn</p>
+    <p>Kumie Section, This is Kumilachew Getie</p>
   </body>
 </html>
